syntax = "proto3";

package proto;

option go_package = "./;proto";


message ReqLogin {
  uint32 serverId = 1;
  string account = 2;
}

message ResLogin {
  uint32 serverId = 1;
  string account = 2;
}